# nuc_display

./: .cursorrules  .gitignore  CMakeLists.txt  README.md  config.json  nuc_display.service
.github/workflows/: build.yml
cmake/: rpi_toolchain.cmake
scripts/: generate_icons.py  install.sh
src/: main.c  main.cpp  screenshot_tool.cpp
src/core/: display_manager.cpp  display_manager.hpp  renderer.cpp  renderer.hpp
src/modules/: audio_player.cpp  audio_player.hpp  camera_module.cpp  camera_module.hpp  config_module.cpp  config_module.hpp  config_validator.cpp  config_validator.hpp  container_reader.cpp  container_reader.hpp  image_loader.cpp  image_loader.hpp  input_module.cpp  input_module.hpp  media_module.hpp  news_module.cpp  news_module.hpp  performance_monitor.cpp  performance_monitor.hpp  screenshot_module.cpp  screenshot_module.hpp  stock_module.cpp  stock_module.hpp  text_renderer.cpp  text_renderer.hpp  video_decoder.cpp  video_decoder.hpp  video_decoder_v4l2.cpp  weather_module.cpp  weather_module.hpp
src/utils/: thread_pool.hpp
tests/: CMakeLists.txt  CREDITS.md  create_benchmark_videos.sh  create_uhd_videos.sh  stubs_alsa.cpp  stubs_alsa.hpp  test_integration.cpp  test_modules.cpp  test_utils.cpp  test_video_decoder.cpp  video_test.cpp
tests/samples/: CREDITS.md
